--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,21 @@ a {
 }
 
 img {
-	width: 50%;
 	margin: auto;
+}
+
+#alt-text {
+	width: 60%;
+	margin: auto;
+	text-align: center;
+}
+
+.active {
+	color: red !important;
+}
+
+#flex-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
